# nibe-exporter

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  release-please-config.json  renovate.jsonc
.github/workflows/: build-release.yml  ci.yml  docker.yml  helm.yml  release-please.yml  release.yml
charts/nibe-exporter/: Chart.yaml  values.yaml
charts/nibe-exporter/templates/: _helpers.tpl  ciliumnetworkpolicy.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  networkpolicy.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: getting-started.md  helm-deployment.md
hack/: kind-smoke.sh
src/: config.rs  lib.rs  main.rs  server.rs  telemetry.rs
src/metrics/: encode.rs  handler.rs  mapping.rs  mod.rs
src/myuplink/: auth.rs  client.rs  error.rs  mod.rs  models.rs
tests/: integration.rs  snapshot_metrics.rs
tests/common/: mod.rs
tests/snapshots/: snapshot_metrics__snapshot_counter_metric.snap  snapshot_metrics__snapshot_empty_metrics.snap  snapshot_metrics__snapshot_escaping_special_characters.snap  snapshot_metrics__snapshot_metric_with_negative_value.snap  snapshot_metrics__snapshot_metric_with_scientific_notation.snap  snapshot_metrics__snapshot_metric_with_zero_value.snap  snapshot_metrics__snapshot_mixed_metrics.snap  snapshot_metrics__snapshot_multiple_temperature_metrics.snap  snapshot_metrics__snapshot_single_temperature_metric.snap
